--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="btn_reset">RESET</div>
-  <!--<audio id="audio_drum" src="audio/doram01.wav"></audio>-->
-  <!--<audio id="audio_cymbal" src="audio/cymbal01.wav"></audio>-->
+  <audio id="audio_drum" src="audio/drumroll.wav"></audio>
+  <audio id="audio_cymbal" src="audio/cymbal.wav"></audio>
 </body>
 </html>
